Started work on the caching of directory data.

--- a/steam_api/steam_api.vcproj
+++ b/steam_api/steam_api.vcproj
@@ -254,6 +254,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\DirCache.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\FileLogger.cpp"
 				>
 			</File>
@@ -311,6 +315,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\DirCache.h"
+				>
+			</File>
 			<File
 				RelativePath=".\FileLogger.h"
 				>
